@@ -23,6 +23,9 @@
 # error "Please do not include this file directly"
 #endif
 
+#include <asm/segment.h>
+#include <asm/processor-flags.h>
+
 #ifndef __ASSEMBLY__
 
 #ifdef CONFIG_X86_32
@@ -90,6 +93,33 @@ struct pt_regs {
 	 */
 };
 #endif
+
+/*
+ * user_mode(regs) determines whether a register set came from user
+ * mode.  On x86_32, this is true if V8086 mode was enabled OR if the
+ * register set was from protected mode with RPL-3 CS value.  This
+ * tricky test checks that with one comparison.
+ *
+ * On x86_64, vm86 mode is mercifully nonexistent, and we don't need
+ * the extra check.
+ */
+static inline int user_mode(struct pt_regs *regs)
+{
+#ifdef CONFIG_X86_32
+	return ((regs->cs & SEGMENT_RPL_MASK) | (regs->flags & X86_VM_MASK)) >= USER_RPL;
+#else
+	return !!(regs->cs & 3);
+#endif
+}
+
+static inline int v8086_mode(struct pt_regs *regs)
+{
+#ifdef CONFIG_X86_32
+	return (regs->flags & X86_VM_MASK);
+#else
+	return 0;	/* No V86 mode support in long mode */
+#endif
+}
 
 #ifdef CONFIG_X86_32
 unsigned long kernel_stack_pointer(struct pt_regs *regs);
