@@ -1,5 +1,12 @@
+#
+# x86 kernel code
+#
+
 obj-y := setup.o
-obj-y += e820.o traps.o dumpstack.o process.o
+obj-y += e820.o
+obj-y += traps.o
+obj-y += dumpstack.o
+obj-y += process.o process_$(BITS).o
 
 # head file
 extra-y := head_$(BITS).o
